Iniciando com Jakarta Persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=AlgaWorks
+spring.datasource.url=jdbc:mysql://localhost:3306/awpag?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=peDO2909
+spring.jpa.show-sql=true
